Add endpoint /reserve
